--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,11 @@ JS atsiskaitymas/JS Tasks - Kebab/Task 8/index.html
 JS atsiskaitymas/JS Tasks - Kebab/Task 8/script.js
 JS atsiskaitymas/JS Tasks - Kebab/Task 9/index.html
 JS atsiskaitymas/JS Tasks - Kebab/Task 9/script.js
+JS atsiskaitymas/JS Tasks - Kebab/Task 10/Task 10/index.html
+JS atsiskaitymas/JS Tasks - Kebab/Task 10/Task 10/script.js
+JS atsiskaitymas/JS Tasks - Kebab/Task 10/Task 10/modules/math/composition.js
+JS atsiskaitymas/JS Tasks - Kebab/Task 10/Task 10/modules/math/division.js
+JS atsiskaitymas/JS Tasks - Kebab/Task 10/Task 10/modules/math/index.js
+JS atsiskaitymas/JS Tasks - Kebab/Task 10/Task 10/modules/math/multiplication.js
+JS atsiskaitymas/JS Tasks - Kebab/Task 10/Task 10/modules/math/subtraction.js
+JS atsiskaitymas/JS Tasks - Kebab/Task 10/Task 10/modules/numbers/numbers.js
